--- a/sass/partials/_js.scss
+++ b/sass/partials/_js.scss
@@ -1,3 +1,12 @@
+.js-form-toggle {
+    display: block;
+}
+
+.js-form-error {
+    color: red;
+    margin-bottom: 0;
+}
+
 .pr-selection {
     background: #f5f5f5;
     border:1px solid #ddd;
