--- a/sass/style.scss
+++ b/sass/style.scss
@@ -43,7 +43,7 @@
 // Example: use @import "partials/nav" if you are adding style to the nav object.
 ///
 @import "partials/global";
-@import "partials/hal";
+@import "partials/js";
 @import "partials/base/forms";
 @import "partials/base/tables";
 @import "partials/patterns/nav";
