Adding hal-core to DI container.
- Cleanup.
- Changing from lib to src for namespace root.
- Updating composer dep versions to use something other than star.
- Starting to cleanup the di container.
- More config cleanup.
- Updated arrangements page to groups page. Switching to doctrine repository.
- Removing old arrangement list page.
- Adding group page, replaces arrangement. Updating routes and di. Removing old arrangement page.
- Migrating user page to doctrine. Renaming to profile page. Defaulting to current user. Updating url.
- Safely handle weird environment ordering
- Add bin to refresh assets and compile all the sassness
- Add fancy sorting when reordering envs
- Add styles for sortable envs

--- a/app/templates/admin/environments.twig
+++ b/app/templates/admin/environments.twig
@@ -7,8 +7,9 @@
 
     {% if envs %}
         <form action="?reorder=1" method="post">
+        <p>Drag the rows to change the order in which they are displayed.</p>
         <div class="overflow-container">
-            <table>
+            <table id="env-reorder">
                 <thead>
                 <tr>
                     <th>Name</th>
@@ -19,7 +20,7 @@
                 <tbody>
                 {% for env in envs %}
                     <tr class="env-row-{{ env.ShortName }}">
-                        <td>{{ env.ShortName }}</td>
+                        <td><span class="icon-sort"></span> {{ env.ShortName }}</td>
                         <td><input type="text" maxlength="3" required name="env{{ env.EnvironmentId }}" value="{{ env.DispOrder }}" class="text-input"></td>
                         <td></td>
                     </tr>
