--- a/app/templates/repository.build.history.twig
+++ b/app/templates/repository.build.history.twig
@@ -1,18 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% set page_title = repo.key~" Push History" %}
+{% set page_title = repo.key~" Build History" %}
 
 {% block content %}
     <p><a class="btn--small btn--back" href="{{ urlFor('repo', {'repo': repo.key}) }}">Back to Repository</a></p>
 
-    <h2>{{ repo.key }} Push History</h2>
+    <h2>{{ repo.key }} Build History</h2>
 
-    {% include 'partials/push-table.twig' with {'pushes': pushes} %}
+    {% include 'partials/build-table.twig' with {'builds': builds, 'user': user} %}
 
     <ol class="nav--pagination">
         <li class="nav--pagination__prev">
             {% if page > 1 %}
-                <a href="{{ urlFor('push.history', {'repo': repo.key, 'page': page-1}) }}"><i class="fa fa-arrow-circle-left"></i> newer</a>
+                <a href="{{ urlFor('build.history', {'repo': repo.key, 'page': page-1}) }}"><i class="fa fa-arrow-circle-left"></i> newer</a>
             {% else %}
                 <span class="disabled"><i class="fa fa-arrow-circle-left"></i> newer</span>
             {% endif %}
@@ -24,7 +24,7 @@
         </li>
         <li class="nav--pagination__next">
             {% if page < last %}
-                <a href="{{ urlFor('push.history', {'repo': repo.key, 'page': page+1}) }}">older <i class="fa fa-arrow-circle-right"></i></a>
+                <a href="{{ urlFor('build.history', {'repo': repo.key, 'page': page+1}) }}">older <i class="fa fa-arrow-circle-right"></i></a>
             {% else %}
                 <span class="disabled">older <i class="fa fa-arrow-circle-right"></i></span>
             {% endif %}
