--- a/app/templates/group.twig
+++ b/app/templates/group.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <h2>{{ group.name }} Repositories</h2>
+    <h2>{{ group.name }} Repository Group</h2>
 
     <div class="overflow-container">
         <table>
