--- a/app/templates/groups.twig
+++ b/app/templates/groups.twig
@@ -3,7 +3,7 @@
 {% set page_title = "Groups" %}
 
 {% block content %}
-    <h2>Groups</h2>
+    <h2>Repository Groups</h2>
 
     <p>
         Repositories are organized into repository groups, commonly a team name or business unit. Select a group below
