--- a/app/templates/push.twig
+++ b/app/templates/push.twig
@@ -17,7 +17,7 @@
                 </tr>
                 <tr>
                     <td>Server</td>
-                    <td><a href="{{ urlFor('server', {'server': push.deployment.server.id}) }}">{{ push.deployment.server.name }}</a> ({{ push.deployment.server.environment.key }})</td>
+                    <td><a href="{{ urlFor('server', {'server': push.deployment.server.name}) }}">{{ push.deployment.server.name }}</a> ({{ push.deployment.server.environment.key }})</td>
                 </tr>
                 <tr>
                     <td>Directory</td>
