Starting to add servers page.

--- a/app/templates/servers.twig
+++ b/app/templates/servers.twig
@@ -16,7 +16,7 @@
             <tbody>
             {% for server in servers %}
                 <tr>
-                    <td></td>
+                    <td>{{ server.name }}</td>
                 </tr>
             {% endfor %}
             </tbody>
