--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -48,6 +48,7 @@
                 <nav role="navigation">
                     <ul class="nav--main mbn">
                         <li><a href="{{ urlFor('groups') }}" title="groups">Repository Groups</a></li>
+                        <li><a href="{{ urlFor('servers') }}">Servers</a></li>
                         <li><a href="{{ urlFor('profile') }}">Profile</a></li>
                         {% if isUserAdmin(account) %}
                             <li><a href="{{ urlFor('admin_repositories') }}" title="admin dashboard">Admin</a></li>
